[Repaint] Correctly apply layout deltas for each render container when computing local rects into container coordinates. https://bugs.webkit.org/show_bug.cgi?id=23308

Reviewed by NOBODY (OOPS!).

Individual layout deltas of each render container need to be applied in parts
between their transforms as `RenderBox::mapLocalToContainer` and
`RenderBox::computeVisibleRectInContainer` walk up the container tree.

This patch ensures layout deltas are applied for each `RenderObject`s while
computing rects into the container coordinates. Otherwise, layers of renderers
may not repaint property due to incorrect repaint rects.

* LayoutTests/fast/repaint/layer-repaint-with-layout-delta-1-expected.txt: Added.
* LayoutTests/fast/repaint/layer-repaint-with-layout-delta-1.html: Added.
* LayoutTests/fast/repaint/layer-repaint-with-layout-delta-2-expected.txt: Added.
* LayoutTests/fast/repaint/layer-repaint-with-layout-delta-2.html: Added.
* LayoutTests/fast/repaint/overflow-hidden-movement-expected.txt:
* LayoutTests/platform/gtk/fast/repaint/layer-repaint-with-layout-delta-1-expected.txt: Added.
* LayoutTests/platform/ios-wk2/fast/repaint/placeholder-after-caps-lock-hidden-expected.txt:
* Source/WebCore/page/LocalFrameViewLayoutContext.cpp:
(WebCore::LocalFrameViewLayoutContext::layoutDeltaOfRenderer const):
(WebCore::LocalFrameViewLayoutContext::pushLayoutState):
(WebCore::LocalFrameViewLayoutContext::pushLayoutStateForPaginationIfNeeded):
(WebCore::LocalFrameViewLayoutContext::popLayoutState):
* Source/WebCore/page/LocalFrameViewLayoutContext.h:
* Source/WebCore/rendering/RenderBox.cpp:
(WebCore::RenderBox::outlineBoundsForRepaint const):
(WebCore::RenderBox::mapLocalToContainer const):
(WebCore::RenderBox::clippedOverflowRect const):
(WebCore::RenderBox::computeVisibleRectUsingPaintOffset const):
(WebCore::RenderBox::computeVisibleRectInContainer const):
* Source/WebCore/rendering/RenderLayoutState.cpp:
(WebCore::RenderLayoutState::RenderLayoutState):
* Source/WebCore/rendering/RenderLayoutState.h:
(WebCore::RenderLayoutState::renderer const):
* Source/WebCore/rendering/RenderObject.cpp:
(WebCore::RenderObject::repaintRectangle const):
* Source/WebCore/rendering/RenderReplaced.cpp:
(WebCore::RenderReplaced::clippedOverflowRect const):
* Source/WebCore/rendering/RenderTableCell.cpp:
(WebCore::RenderTableCell::clippedOverflowRect const):